# autoresearch-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
scripts/: __init__.py  download_all_dataset.py  download_dataset.py  download_half_dataset.py  embed_dataset.py  generate_showcase_tts.py  run_all.sh  test_fast_loop.py
src/: __init__.py  config.py  db.py  models.py
src/agents/: __init__.py  code_planner.py  evaluator.py  git_ops.py  graph.py  history.py  karpathy_validation.py  karpathy_worker.py  planner.py  progress.py  researcher.py  state.py  text_utils.py  worker.py
src/api/: main.py  routes.py
src/benchmark/: __init__.py  karpathy_sandbox.py  karpathy_sandbox_runner.py  loader.py  metrics.py  runner.py
src/dashboard/: app.py  gunicorn.conf.py
src/retrieval/: __init__.py  base.py  dense.py  embeddings.py  hybrid.py  pipeline.py  qdrant_dense.py  reranker.py
src/static/css/: globals.css
src/templates/: ai_chat.html  api_demo.html  base.html  details.html  experiment_detail.html  experiment_detail_search.html  experiment_new.html  experiments.html  helpers.html  home.html  hypotheses.html  leaderboards.html  logged_in.html  logged_out.html
tests/agents/: test_code_planner.py  test_evaluator.py  test_graph.py  test_karpathy_worker.py  test_planner.py  test_state.py
tests/api/: test_main.py  test_routes_contract.py  test_routes_smoke.py
tests/benchmark/: test_karpathy_sandbox.py  test_karpathy_sandbox_caps.py  test_metrics.py
tests/dashboard/: test_api_key_session.py
