[project]
name = "autorag-research-lab"
version = "0.1.0"
description = "AutoRAG Research Lab for enterprise retrieval experimentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain-core",
    "langchain-google-genai",
    "langgraph",
    "qdrant-client>=1.17.0",
    "sentence-transformers",
    "pydantic",
    "pydantic-settings",
    "rank-bm25",
    "python-dotenv",
    "aiosqlite",
    "httpx",
    "requests",
    "docker",
    "Flask~=3.0.0",
    "kinde-python-sdk~=2.0.8",
    "Flask-Session~=0.5.0",
    "Werkzeug~=3.0.0",
    "gunicorn~=26.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
